--- a/html uzduotys/13 uzduotis atkurti spalvota lentele/style.css
+++ b/html uzduotys/13 uzduotis atkurti spalvota lentele/style.css
@@ -21,7 +21,7 @@
 .trecias {
     background-color: red;
     width: 20%;
-    height: 180px;
+    height: 200px;
     display: inline-block;
     padding-bottom:-5px; 
     margin-bottom: -5px; 
@@ -75,6 +75,16 @@
 .nr9 {
     background-color: violet;
     width: 58%;
-    height: 180px;
+    height: 195px;
     display: inline-block;
+}
+.bnr10 {
+    background-color: red;
+    width: 20%;
+    height: 200px;
+    display: inline-block;
+    padding-bottom:-5px; 
+    margin-bottom: -5px; 
+    margin-top: -10;
+    padding-top: -10;
 }
