--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 4/style.css
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 4/style.css
@@ -1,18 +1,20 @@
  div {
     display: flex;
     border: 3px solid black;
-    justify-content: center;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-direction: row;
+    justify-content: space-around;
+    align-content: stretch;
     flex-wrap: wrap;
-    width: 50%;
+    gap: 30px;
+    width: 30%;
     height: 300px;
 }
 
 .pref {
     display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
     border: 1px solid black;
-    width: 50px;
+    width: 80px;
     height: 50px;
 }
