--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 4/style.css
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 4/style.css
@@ -2,12 +2,10 @@
     display: flex;
     border: 3px solid black;
     justify-content: space-around;
-    align-content: stretch;
-    flex-wrap: wrap;
+    align-content: center;
+    flex-flow: wrap;
     gap: 30px;
-    width: 30%;
-    height: 300px;
-}
+    }
 
 .pref {
     display: flex;
@@ -15,6 +13,15 @@
     flex-wrap: wrap;
     align-items: center;
     border: 1px solid black;
-    width: 80px;
-    height: 50px;
+    padding: 5px;
+}
+.pref2 {
+    display: flex;
+    border: 3px solid black;
+    justify-content: space-around;
+    align-content: center;
+    flex-flow: wrap;
+    gap: 30px;
+    width: 20%;
+    height: 200px;
 }
