--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6/style.css
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6/style.css
@@ -32,31 +32,50 @@
 .content-wraperis {
     display: flex;
     text-decoration:solid;
-
+    height: 500px;
 }
 
 .content-window {
-border: 10px solid gray;
-background-color: white;
-width: 100%;
-padding: 5px;
+    display: flex;
+    flex-direction: column;
+    border: 10px solid gray;
+    position: relative;
+    background-color: white;
+    height: 600px;
+    width: 100%;
+    padding: 5px;
 }
 .content-window2 {
-border: 10px solid gray;
+border-top: 10px solid gray;
+border-bottom: 10px solid gray;
+position: relative;
 width: 100%;
+height: 600px;
 padding: 5px;
+
 }
 
 .wc-botton {
     display: flex;
     justify-content: center;
+    
+    position: absolute;
+    bottom: 10px;
     border: 2px solid black;
-    width: 98%;
-    height: 20px;
+    width: 90%;
+    padding: 10px;
+    margin: 5px 5px 10px 20px;
 
 }
 
 .spider {
     width: 100%;
     height: 300px;
+}
+
+.footer {
+    background-color: yellow;
+    width: 100%;
+    height: 50px;
+
 }
