--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6 su div iseitimi/style.css
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6 su div iseitimi/style.css
@@ -40,28 +40,26 @@
     display: flex;
     flex-direction: column;
     border: 10px solid gray;
-    position: relative;
     background-color: white;
     height: 600px;
     width: 100%;
     padding: 5px;
 }
 .content-window2 {
-border-top: 10px solid gray;
-border-bottom: 10px solid gray;
-position: relative;
-width: 100%;
-height: 600px;
-padding: 5px;
+    display: flex;
+    flex-direction: column;
+    border-top: 10px solid gray;
+    border-bottom: 10px solid gray;
+    width: 100%;
+    height: 600px;
+    padding: 5px;
 
 }
 
-.wc-botton {
+.cw-botton {
     display: flex;
     justify-content: center;
     background-color: lightgray;
-    position: absolute;
-    bottom: 10px;
     border: 2px solid black;
     width: 90%;
     padding: 10px;
@@ -81,6 +79,10 @@ padding: 5px;
     background-color: rgb(230, 200, 68);
     width: 100%;
     height: 50px;
+}
 
-
+.pastraipos-wraperis {
+    display: flex;
+    flex-direction: column;
+    flex-grow:1 ;
 }
