--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6 su div iseitimi/style.css
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6 su div iseitimi/style.css
@@ -26,11 +26,35 @@
     background-color: white;
     text-transform: capitalize;
     color: gold;
-    border: 2px solid black;
-    width: 300px;
+    width: 400px;
     height: 60px;
     margin: 10px;
 }
+
+ .meniu-mygtukiai {
+    display: block;
+    text-align: center;
+    width: 100%; 
+    height: 60px;
+    }
+
+.mlink {
+    display: block;
+    text-align: center;
+    border: 2px solid black;
+    width: 100%; 
+    line-height: 60px;
+    background-color: rgb(172, 172, 172);
+}
+
+.mlink2 {
+    display: block;
+    text-align: center;
+    width: 100%; 
+    line-height: 10px;
+}
+    
+
 .content-wraperis {
     display: flex;
     text-decoration:solid;
@@ -39,13 +63,13 @@
 .content-window {
     display: flex;
     flex-direction: column;
+    align-items: center;
     border: 10px solid gray;
     background-color: white;
-    height: 600px;
     width: 100%;
     padding: 5px;
 }
-.content-window2 {
+/*.content-window2 {
     display: flex;
     flex-direction: column;
     border-top: 10px solid gray;
@@ -54,7 +78,7 @@
     height: 600px;
     padding: 5px;
 
-}
+} */
 
 .cw-botton {
     display: flex;
@@ -63,7 +87,6 @@
     border: 2px solid black;
     width: 90%;
     padding: 10px;
-    margin: 5px 5px 10px 20px;
 
 }
 
@@ -78,11 +101,11 @@
     border: 2px solid gray;
     background-color: rgb(230, 200, 68);
     width: 100%;
-    height: 50px;
 }
 
 .pastraipos-wraperis {
     display: flex;
+    justify-content: start;
     flex-direction: column;
     flex-grow:1 ;
 }
