naujai padarytas su space-between

--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6 su div iseitimi/style.css
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6 su div iseitimi/style.css
@@ -67,6 +67,7 @@
 .content-window {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     border: 10px solid gray;
     background-color: white;
