--- a/web.simmons.edu uzduotys/uzduotis 1/style.css
+++ b/web.simmons.edu uzduotys/uzduotis 1/style.css
@@ -8,21 +8,23 @@
 
 .hd-antras-wrappers-cw {
     display: flex;
-    justify-content: space-between;
+    text-align: right;
     
+}
+.antras-cw-wrappers {
+    justify-content: center;
+    width: 30%;
 }
 .pirmas-cw {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    background-color: lightblue;
-    width: 30%;
     padding-left: 5px;
     padding-right: 5px;
 }
 
 .antras-cw-antras-wrapperis {
     display: flex;
+    justify-content:center ;
 }
 
 .antras-cw-pirmas {
@@ -31,10 +33,8 @@
 }
 
 .antras-cw {
-    font-display:flex;
-    justify-content: center;
-    width: 40%;
-    padding-left: 100px;
+    display: block;
+    text-align: center;
 }
 
 .antras-cw-pirmas {
@@ -46,5 +46,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
+}
+.trecias-cw > p {
+    border: solid rgb(78, 78, 236);
+    border-radius: 3px;
+    padding: 10px;
+    margin:10px;
+}
+
+.skirtukas {
+    display: flex;
+    width: 10px;
+    height: 10px;
+    background-color: white;
 }
