--- a/web.simmons.edu uzduotys/uzduotis 1/style.css
+++ b/web.simmons.edu uzduotys/uzduotis 1/style.css
@@ -4,6 +4,7 @@
     flex-direction: row;
     background-color: lightblue;
     width: 100%;
+    flex-grow: 1;
 }
 
 .hd-antras-wrappers-cw {
@@ -47,11 +48,18 @@
     justify-content: center;
     align-items: center;
 }
-.trecias-cw > p {
+.trecias-cw-pirmas {
     border: solid rgb(78, 78, 236);
     border-radius: 3px;
-    padding: 10px;
+    padding: 10px 20px 10px 20px;
     margin:10px;
+}
+
+.trecias-cw-antras {
+    border: solid rgb(78, 78, 236);
+    border-radius: 3px;
+    margin:10px;
+
 }
 
 .skirtukas {
