--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 8/style.css
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 8/style.css
@@ -1,8 +1,7 @@
 .border {
     border: 3px solid black;
     border-radius: 7px ;
-    width: 450px;
-    min-width: 430px;
+    max-width: 60%;
 }
 .eilutes {
     display: flex;
@@ -16,12 +15,9 @@
     font-size:xx-large;
     background-color: gray;
     color:white;
-    align-content: center;
     border: 1px solid white;
-    width: 50px;
-    height: 50px;
-    min-width: 50px;
-    min-height: 50px;
+    width: 100px;
+    height: 100px;
 }
 
 .green {
